--- a/index.html
+++ b/index.html
@@ -408,11 +408,12 @@
   <!-- ✅ One CTA only -->
   <div class="floatBar">
     <a class="btnPrimary"
-       href="https://wa.me/8613427596902?text=Hi%20I%20want%20to%20request%20a%20private%20consultation.%20Shoes%2FBags%2FWatches%2FClothing."
+       href="https://wa.me/8613427596902"
        target="_blank" rel="noopener">
       Request Private Consultation
     </a>
   </div>
 </body>
 </html>
+
 
