--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Private custom concierge consultation for luxury styling requests. Details and visuals are shared one-on-one upon request." />
 
   <!-- ✅ Performance: preload hero -->
-  <link rel="preload" as="image" href="assets/hero.webp" />
+  <link rel="preload" as="image" href="assets/hero.png" />
 
   <!-- ✅ Meta Pixel -->
   <script>
@@ -415,5 +415,6 @@
   </div>
 </body>
 </html>
+
 
 
