--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Private custom concierge consultation for luxury styling requests. Details and visuals are shared one-on-one upon request." />
 
   <!-- ✅ Performance: preload hero -->
-  <link rel="preload" as="image" href="assets/hero.png" />
-
+  <link rel="preload" as="image" href="assets/hero.webp" />
+webp
   <!-- ✅ Meta Pixel -->
   <script>
     !function(f,b,e,v,n,t,s)
@@ -415,6 +415,7 @@
   </div>
 </body>
 </html>
+
 
 
 
